--- a/style/style.css
+++ b/style/style.css
@@ -4,3 +4,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body{
+
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+}
